syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";


service PessoaProtoService {
	rpc ObterPessoa (ObterPessoaRequest) returns (ObterPessoaResponse);
}

message ObterPessoaRequest {
	string nome = 1;
}

message ObterPessoaResponse {
	string nome = 1;
	string sobrenome = 2;
}